[package]
name = "seccomp-droundy"
version = "0.1.0"
authors = ["Alexander Polakov <apolyakov@beget.ru>", "David Roundy <daveroundy@gmail.com>"]
license = "LGPL-2.1"
keywords = ["linux", "seccomp"]
description = "higher-level bindings to libseccomp"
repository = "https://github.com/droundy/seccomp"
readme = "README.md"

[dependencies]
libc = "0.2"
seccomp-droundy-sys = "0.1.2"
